--- a/blacklist.html
+++ b/blacklist.html
@@ -220,16 +220,12 @@
 
             // 檢查用戶是否已登入（根據 Firestore 中的 loggedIn 欄位）
             if (!userData.loggedIn) {
-              // 用戶未登入，跳轉到其他頁面
-              window.location.href = 'index.html';  // 替換成登入頁面
+              // 用戶未登入，跳轉到登入頁面
+              window.location.href = 'login.html';  // 替換成登入頁面
             } else {
-              // 如果是管理員用戶（假設有角色欄位）
-              if (userData.role !== 'admin') {
-                window.location.href = 'home.html';  // 跳轉到首頁
-              } else {
-                // 如果是已登入且有管理員權限的用戶，顯示頁面
-                document.getElementById('user-id').textContent = `已登入：${userData.username}`;
-              }
+              // 如果是已登入的用戶，顯示頁面
+              document.getElementById('user-id').textContent = `已登入：${userData.username}`;
+              renderList();  // 顯示黑名單列表
             }
           } else {
             window.location.href = 'index.html';  // 用戶資料不存在，跳轉到登入頁面
