--- a/blacklist.html
+++ b/blacklist.html
@@ -192,19 +192,60 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
   <script>
-    // ✅ 你的 Firebase 設定
+    // ✅ Firebase 設定
     const firebaseConfig = {
       apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
       authDomain: "dg11-c954c.firebaseapp.com",
       projectId: "dg11-c954c"
     };
-
-    // 初始化
+  
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
     const tableBody = document.getElementById("blacklistItems");
-
-    // 監聽並顯示列表
+  
+    // ✅ 檢查登入狀態與權限
+    window.addEventListener('DOMContentLoaded', () => {
+      const userId = sessionStorage.getItem('loggedInUserId');
+  
+      if (!userId) {
+        window.location.href = 'index.html'; // 未登入者導回登入頁面
+        return;
+      }
+  
+      db.collection('users').doc(userId).get()
+        .then((doc) => {
+          if (!doc.exists) {
+            window.location.href = 'index.html';
+            return;
+          }
+  
+          const userData = doc.data();
+  
+          if (!userData.loggedIn) {
+            window.location.href = 'index.html';
+            return;
+          }
+  
+          // ✅ 檢查角色權限，如果你只允許 admin 操作，請啟用以下條件：
+          if (userData.role !== 'admin') {
+            alert("無權訪問此頁面");
+            window.location.href = 'home.html';
+            return;
+          }
+  
+          // 顯示使用者名稱
+          document.getElementById('user-id').textContent = `已登入：${userData.username}`;
+  
+          // ✅ 登入且為 admin，載入黑名單列表
+          renderList();
+        })
+        .catch((err) => {
+          console.error("錯誤：", err);
+          window.location.href = 'index.html';
+        });
+    });
+  
+    // 渲染黑名單列表
     function renderList() {
       db.collection("blacklist").orderBy("time", "desc").onSnapshot(snapshot => {
         tableBody.innerHTML = "";
@@ -221,18 +262,16 @@
         });
       });
     }
-
-    renderList();
-
+  
     // 新增黑名單
     document.getElementById("blacklistForm").addEventListener("submit", e => {
       e.preventDefault();
       const lineId = document.getElementById("lineId").value.trim();
       const reason = document.getElementById("reason").value.trim();
       const operatorId = localStorage.getItem("loggedInUser") || "未知";
-
+  
       if (!lineId || !reason) return alert("請填寫所有欄位");
-
+  
       db.collection("blacklist").add({
         lineId,
         reason,
@@ -243,7 +282,7 @@
         document.getElementById("reason").value = "";
       });
     });
-
+  
     // 刪除資料
     function deleteItem(id) {
       if (confirm("確定要刪除這筆資料嗎？")) {
