--- a/blacklist.html
+++ b/blacklist.html
@@ -192,53 +192,19 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
 
   <script>
-    // ✅ Firebase 設定
+    // ✅ 你的 Firebase 設定
     const firebaseConfig = {
       apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
       authDomain: "dg11-c954c.firebaseapp.com",
       projectId: "dg11-c954c"
     };
-  
+
+    // 初始化
     firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
     const tableBody = document.getElementById("blacklistItems");
-  
-    // ✅ 檢查登入狀態（不限制角色）
-    window.addEventListener('DOMContentLoaded', () => {
-      const userId = sessionStorage.getItem('loggedInUserId');
-  
-      if (!userId) {
-        window.location.href = 'index.html'; // 未登入者導回登入頁面
-        return;
-      }
-  
-      db.collection('users').doc(userId).get()
-        .then((doc) => {
-          if (!doc.exists) {
-            window.location.href = 'index.html';
-            return;
-          }
-  
-          const userData = doc.data();
-  
-          if (!userData.loggedIn) {
-            window.location.href = 'index.html';
-            return;
-          }
-  
-          // 顯示使用者名稱
-          document.getElementById('user-id').textContent = `已登入：${userData.username}`;
-  
-          // ✅ 登入成功即可讀取黑名單
-          renderList();
-        })
-        .catch((err) => {
-          console.error("錯誤：", err);
-          window.location.href = 'index.html';
-        });
-    });
-  
-    // ✅ 渲染黑名單列表
+
+    // 監聽並顯示列表
     function renderList() {
       db.collection("blacklist").orderBy("time", "desc").onSnapshot(snapshot => {
         tableBody.innerHTML = "";
@@ -255,16 +221,18 @@
         });
       });
     }
-  
-    // ✅ 新增黑名單
+
+    renderList();
+
+    // 新增黑名單
     document.getElementById("blacklistForm").addEventListener("submit", e => {
       e.preventDefault();
       const lineId = document.getElementById("lineId").value.trim();
       const reason = document.getElementById("reason").value.trim();
       const operatorId = localStorage.getItem("loggedInUser") || "未知";
-  
+
       if (!lineId || !reason) return alert("請填寫所有欄位");
-  
+
       db.collection("blacklist").add({
         lineId,
         reason,
@@ -275,16 +243,14 @@
         document.getElementById("reason").value = "";
       });
     });
-  
-    // ✅ 刪除黑名單資料
+
+    // 刪除資料
     function deleteItem(id) {
       if (confirm("確定要刪除這筆資料嗎？")) {
         db.collection("blacklist").doc(id).delete();
       }
     }
   </script>
-  
-  
   <a href="home.html" class="back-to-home-btn">🏠 返回主頁</a>
 </body>
 </html>
