--- a/home.html
+++ b/home.html
@@ -252,14 +252,14 @@
 
 <script>
   // ✅ 初始化 Firebase（如果尚未初始化）
-  const firebaseConfig = {
-    apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
-    authDomain: "dg11-c954c.firebaseapp.com",
-    projectId: "dg11-c954c",
-    storageBucket: "dg11-c954c.appspot.com",
-    messagingSenderId: "1010585577335",
-    appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
-  };
+const firebaseConfig = {
+  apiKey: "AIzaSyCT0Li1XXZ4hZjBTrU8rp1N-ixV5dTrSZQ",
+  authDomain: "dg11-c954c.firebaseapp.com",
+  projectId: "dg11-c954c",
+  storageBucket: "dg11-c954c.firebasestorage.app",
+  messagingSenderId: "1010585577335",
+  appId: "1:1010585577335:web:ad4f84c5205ba048b22372"
+};
 
   if (!firebase.apps.length) {
     firebase.initializeApp(firebaseConfig);
